<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.alienlabs.adaloveslace</groupId>
  <artifactId>adaloveslace</artifactId>
  <version>0.2.6</version>
  <description>A tatting lace patterns creation software</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>19</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <test-plugins.version>3.0.0-M7</test-plugins.version>
    <javafx.version>19</javafx.version>
    <itext.version>7.2.2</itext.version>
    <testfx.version>4.0.16-alpha</testfx.version>
    <junit.version>5.8.2</junit.version>
    <logback.version>1.3.0-alpha16</logback.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-base</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-graphics</artifactId>
      <version>${javafx.version}</version>
      <classifier>win</classifier>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-swing</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>kernel</artifactId>
      <version>${itext.version}</version>
    </dependency>
    <!-- always needed -->
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>io</artifactId>
      <version>${itext.version}</version>
    </dependency>
    <!-- always needed -->
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>layout</artifactId>
      <version>${itext.version}</version>
    </dependency>
    <!-- only needed for PDF/A -->
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>pdfa</artifactId>
      <version>${itext.version}</version>
    </dependency>

    <dependency>
      <groupId>jakarta.xml.bind</groupId>
      <artifactId>jakarta.xml.bind-api</artifactId>
      <version>4.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-impl</artifactId>
      <version>4.0.0</version>
    </dependency>

    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.8</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.0-alpha7</version>
    </dependency>

    <dependency>
      <groupId>com.github.spotbugs</groupId>
      <artifactId>spotbugs-annotations</artifactId>
      <version>4.7.0</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-core</artifactId>
      <version>${testfx.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-junit5</artifactId>
      <version>${testfx.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-core</artifactId>
      <version>2.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>4.6.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>adaloveslace</finalName>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>${java.version}</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>org.alienlabs.adaloveslace.App</mainClass>
        </configuration>
      </plugin>

      <!--<plugin>
        &lt;!&ndash; This copies the JRE used to do the build from java.home - should be 32 bit Windows JRE &ndash;&gt;
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>copy-resources</id>
            &lt;!&ndash; here the phase you need &ndash;&gt;
            <phase>package</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${basedir}/target/win32/java</outputDirectory>
              <resources>
                <resource>
                  <directory>${java.home}</directory>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>unpack-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>unpack-dependencies</goal>
            </goals>
            <configuration>
              <excludeScope>system</excludeScope>
              <excludes>META-INF/*.SF,META-INF/*.DSA,META-INF/*.RSA</excludes>
              <excludeGroupIds>junit,org.mockito,org.hamcrest</excludeGroupIds>
              <outputDirectory>${project.build.directory}/classes</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.4.0</version>
        <executions>
          <execution>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <finalName>adaloveslace-0.2.6</finalName>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
                </filter>
              </filters>
              <shadedArtifactAttached>true</shadedArtifactAttached>
              <transformers>
                <transformer implementation=
                                     "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <manifestEntries>
                    <Main-Class>org.alienlabs.adaloveslace.NewMain</Main-Class>
                  </manifestEntries>
                  <mainClass>org.alienlabs.adaloveslace.NewMain</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        &lt;!&ndash; This calls launch4j to create the program EXE &ndash;&gt;
        <groupId>com.akathist.maven.plugins.launch4j</groupId>
        <artifactId>launch4j-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>l4j-clui</id>
            <phase>package</phase>
            <goals>
              <goal>launch4j</goal>
            </goals>
            <configuration>
              <headerType>console</headerType>
              <outfile>target/adaloveslace-0.2.6.exe</outfile>
              <jar>target/adaloveslace-0.2.6.jar</jar>
              <errTitle>encc</errTitle>
              <classPath>
                <mainClass>org.alienlabs.adaloveslace.NewMain</mainClass>
                <addDependencies>true</addDependencies>
              </classPath>
              <jre>
                <path>./win32/java</path>
              </jre>
              <versionInfo>
                <fileVersion>0.2.6.0</fileVersion>
                <txtFileVersion>txt file version</txtFileVersion>
                <fileDescription>a description</fileDescription>
                <copyright>my copyright</copyright>
                <productVersion>0.2.6.0</productVersion>
                <txtProductVersion>AdaLovesLace</txtProductVersion>
                <productName>AdaLovesLace</productName>
                <internalName>adaloveslace</internalName>
                <originalFilename>adaloveslace.exe</originalFilename>
              </versionInfo>
            </configuration>
          </execution>
        </executions>
      </plugin>-->

      <!--<plugin>
        <groupId>io.github.fvarrui</groupId>
        <artifactId>javapackager</artifactId>
        <version>1.6.7</version>
        <executions>
          <execution>
            <phase>install</phase>
            <goals>
              <goal>package</goal>
            </goals>
            <configuration>
              <name>adaloveslace</name>
              <mainClass>org.alienlabs.adaloveslace.App</mainClass>
              <generateInstaller>true</generateInstaller>
              <generateMsi>true</generateMsi>
              <generateMsm>false</generateMsm>
              <administratorRequired>false</administratorRequired>
              <bundleJre>true</bundleJre>
              <jdkPath>C:\Program Files\Java\jdk-19</jdkPath>
              &lt;!&ndash;
                customizedJre = false because of iText (which is not modular yet)
                See: https://github.com/fvarrui/JavaPackager/issues/126
              &ndash;&gt;
              <customizedJre>false</customizedJre>
              <organizationName>AlienLabs</organizationName>
              <organizationEmail>goupilpierre@gmail.com</organizationEmail>
              <assetsDir>${basedir}/src/main/resources/assets</assetsDir>
              <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
              <platform>windows</platform>
              <copyDependencies>true</copyDependencies>
              <winConfig>
                <headerType>console</headerType>
                <setupLanguages>
                  <french>compiler:Languages\French.isl</french>
                  <english>compiler:Languages\English.isl</english>
                </setupLanguages>
              </winConfig>
              <vmArgs>
                <vmArg>-Dglass.gtk.uiScale=200%</vmArg>
                <vmArg>&#45;&#45;module-path libs</vmArg>
                <vmArg>&#45;&#45;add-modules io,kernel,layout,javafx.base,javafx.controls,javafx.graphics,javafx.swing,org.slf4j</vmArg>
              </vmArgs>
              <additionalResources>
                <additionalResource>${basedir}/target/classes/org/</additionalResource>
                <additionalResource>${basedir}/target/classes/assets/</additionalResource>
              </additionalResources>
              <fileAssociations>
                <fileAssociation>
                  <description>Ada Loves Lace file</description>
                  <extension>lace</extension>
                  <mimeType>application/lace</mimeType>
                </fileAssociation>
              </fileAssociations>
            </configuration>
          </execution>
        </executions>
      </plugin>-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>org.alienlabs.adaloveslace.NewMain</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
        <version>${test-plugins.version}</version>
        <configuration>
          <skipTests>${skipUTs}</skipTests>
          <includes>
            <include>**/unittest/**</include>
          </includes>
          <excludes>
            <exclude>**/functionaltest/**</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${test-plugins.version}</version>
        <executions>
          <execution>
            <phase>test</phase>
            <goals>
              <goal>integration-test</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <forkCount>1</forkCount>
          <useSystemClassLoader>true</useSystemClassLoader>
          <includes>
            <include>**/functionaltest/**</include>
          </includes>
          <excludes>
            <exclude>**/unittest/**</exclude>
          </excludes>
          <argLine>@{argLine} --add-exports javafx.graphics/com.sun.javafx.application=org.testfx</argLine>
          <skipITs>${skipFTs}</skipITs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.5.3.0</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.7</version>
        <configuration>
          <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
          <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
        </configuration>
        <executions>
          <execution>
            <id>jacoco-initialize</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-site</id>
            <phase>package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-pmd-plugin</artifactId>
          <version>3.16.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>3.2.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.16.0</version>
      </plugin>
    </plugins>
  </reporting>

  <profiles>
    <profile>
      <id>linux</id>
      <build>
        <plugins>
          <plugin>
            <groupId>io.github.fvarrui</groupId>
            <artifactId>javapackager</artifactId>
            <version>1.6.7</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>package</goal>
                </goals>
                <configuration>
                  <!-- mandatory -->
                  <mainClass>org.alienlabs.adaloveslace.NewMain</mainClass>
                  <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
                  <!-- optional -->
                  <bundleJre>true</bundleJre>
                  <generateInstaller>true</generateInstaller>
                  <generateMsi>false</generateMsi>
                  <generateMsm>false</generateMsm>
                  <administratorRequired>false</administratorRequired>
                  <platform>linux</platform>
                  <jrePath>/usr/lib/jvm/jdk-19</jrePath>
                  <additionalResources>
                  </additionalResources>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>windows</id>
        <build>
          <plugins>
            <plugin>
              <groupId>io.github.fvarrui</groupId>
              <artifactId>javapackager</artifactId>
              <version>1.6.7</version>
              <executions>
                <execution>
                  <phase>package</phase>
                  <goals>
                    <goal>package</goal>
                  </goals>
                  <configuration>
                    <!-- mandatory -->
                    <mainClass>org.alienlabs.adaloveslace.NewMain</mainClass>
                    <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
                    <!-- optional -->
                    <bundleJre>true</bundleJre>
                    <generateInstaller>true</generateInstaller>
                    <generateMsi>true</generateMsi>
                    <generateMsm>true</generateMsm>
                    <administratorRequired>false</administratorRequired>
                    <platform>windows</platform>
                    <jrePath>C:\Program Files\Java\jdk-19</jrePath>
                    <winConfig>
                      <headerType>console</headerType>
                      <setupLanguages>
                        <french>compiler:Languages\French.isl</french>
                        <english>compiler:Languages\English.isl</english>
                      </setupLanguages>
                    </winConfig>
                    <additionalResources>
                    </additionalResources>
                  </configuration>
                </execution>
              </executions>
            </plugin>
          </plugins>
        </build>
    </profile>
  </profiles>
</project>
